--- a/disaster/package.json
+++ b/disaster/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "reframe.js": "^2.2.4",
     "rxjs": "^6.0.0",
     "webpack": "^4.21.0",
     "yarn": "^1.10.1",
