fixed bug that says: cannot find module '@angular/compiler/cli

--- a/disaster/src/tsconfig.app.json
+++ b/disaster/src/tsconfig.app.json
@@ -7,5 +7,14 @@
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
+  ],
+  "files": [
+    "./app/app.module.ts",
+    "./main.ts",
+    "./polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "node_modules/angular-bootstrap-md/**/*.ts" 
   ]
 }
